[tool.poetry]
name = "xmrgprocessing"
version = "0.9.0"
description = ""
authors = ["DANRAMAGE <ChiefDan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
geopandas = "^1.0.1"
requests = "^2.32.3"
xeniadbutilities = {git = "https://github.com/DanRamage/xeniadbutilities.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
